--- a/bai-tap/bai-tap-3/index1.html
+++ b/bai-tap/bai-tap-3/index1.html
@@ -1,124 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
-    <title>Truyện kể Teyvat</title>
 
-    <style>
-      * {
-        box-sizing: border-box;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="main.css" />
+  <title>Truyện kể Teyvat</title>
 
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-      }
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+    }
 
-      /* Style the header */
-      .header {
-        /* background-image: url(https://images6.alphacoders.com/112/1123014.jpg); */
-        object-fit: cover;
-        padding: 0px;
-        background-color: hsl(0, 0%, 95%);
-        padding: 0 px;
-        text-align: left;
-        outline-width: 0px;
-        outline-style: dashed;
-        outline-color: #96c4e2;
-        outline-offset: 0px;
-        position: fixed;
-        bottom: 0;
-        background: rgba(0, 0, 0, 0.5);
-        width: 100%;
-        padding: 20px;
-      }
-      #myVideo {
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        min-width: 100%;
-        min-height: 100%;
-        width: 100%;
-      }
-      #parent2 {
-        position: relative;
-        width: 158px;
-        height: 187px;
-      }
+    body {
+      background-image: url(/media/img/2luc-dia-tey-vat.jpg);
+      background-repeat: no-repeat;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-      #child2 {
-        position: absolute;
-        top: 72px;
-        right: 804px;
+    /* Style the header */
+    .header {
+      /* background-image: url(/media/img/Jean.png); */
+      object-fit: cover;
 
-        font-size: 40px;
-      }
+      background-color: hsl(0, 0%, 95%);
+      padding: 0 px;
+      text-align: left;
+      outline-width: 0px;
+      outline-style: dashed;
+      outline-color: #96c4e2;
+      outline-offset: 0px;
+      position: fixed;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      width: 100%;
+      padding: 5px;
+    }
 
-      /* Create three equal columns that floats next to each other */
+    /* #myVideo {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      width: 100%;
+    } */
+
+    #parent1 {
+      /* position: relative; */
+      width: 100px;
+      height: 100px;
+    }
+
+    #child1 {
+      float: left;
+      margin: 1cm;
+      /* position: absolute;
+      top: 72px;
+      right: 804px;
+
+      font-size: 40px; */
+    }
+
+    /* Create three equal columns that floats next to each other */
+    .column {
+      float: left;
+      width: 33.33%;
+      padding: 10px;
+      height: 300px;
+      /* Should be removed. Only for demonstration */
+    }
+
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+
+    /* Style the footer */
+    .footer {
+      background-color: #f1f1f1;
+      padding: 10px;
+      text-align: center;
+    }
+
+    /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+    @media (max-width: 600px) {
       .column {
-        float: left;
-        width: 33.33%;
-        padding: 10px;
-        height: 300px;
-        /* Should be removed. Only for demonstration */
+        width: 100%;
       }
+    }
 
-      /* Clear floats after the columns */
-      .row:after {
-        content: "";
-        display: table;
-        clear: both;
-      }
+    #myPicture {
+      width: 40%;
 
-      /* Style the footer */
-      .footer {
-        background-color: #f1f1f1;
-        padding: 10px;
-        text-align: center;
-      }
+      display: block;
+    }
 
-      /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-      @media (max-width: 600px) {
-        .column {
-          width: 100%;
-        }
-      }
-    </style>
-  </head>
 
-  <body>
-    <div class="all">
-      <video autoplay id="myVideo">
+    #myPicture2 {
+      width: 20%;
+      margin-left: 500px;
+      display: block;
+    }
+
+    #myPicture3 {
+      width: 60%;
+
+      display: block;
+
+    }
+
+    .menu {
+      background-color: rgba(94, 255, 0, 0.267);
+      background-color: linear-gradient(0, rgb(94, 255, 0), rgb(255, 0, 0));
+    }
+  </style>
+
+</head>
+
+<body>
+  <div class="all">
+
+    <div>
+      <!-- <video autoplay id="myVideo">
         <source src="/media/video/GI.mp4.mp4" type="video/mp4" />
         Your browser does not support HTML5 video.
-      </video>
+      </video> -->
+      <img id="myPicture2" src="/media/img/Text-Jean.png" alt="">
+      <img id="myPicture" src="/media/img/thong-bao.png" alt="">
 
-      <div class="header">
-        <div>
-          <img id="parent2" src="/media/img/a.png" alt="Logo" />
-          <h1 id="child2">LỤC ĐỊA TEYVAT</h1>
-        </div>
-      </div>
+      <img id="myPicture3" src="/media/img/Jean.png" alt="">
+
+
+    </div>
+    <div class="header">
       <div>
-        <nav>
-          <ul>
-            <li>Video</li>
-            <li>Đã thích</li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="row">
-        <div class="column" style="background-color: #aaa">Column</div>
-        <div class="column" style="background-color: #bbb">Column</div>
-        <div class="column" style="background-color: #ccc">Column</div>
-      </div>
-
-      <div class="footer">
-        <p>Footer</p>
+        <img id="parent1" src="/media/img/logo-paimon.png" alt="Logo" />
+        <h1 id="child1">LỤC ĐỊA TEYVAT</h1>
       </div>
     </div>
-  </body>
+
+    <div class="menu">
+      <nav">
+        <ul id="selection_1">
+          <li>Video</li>
+          <li>Đã thích</li>
+        </ul>
+        </nav>
+    </div>
+
+    <div class="row">
+      <div class="column" style="background-color: #aaa">Column</div>
+      <div class="column" style="background-color: #bbb">Column</div>
+      <div class="column" style="background-color: #ccc">Column</div>
+    </div>
+
+    <div class="footer">
+      <p>Footer</p>
+    </div>
+  </div>
+</body>
+
 </html>
